<resources>
    <string name="app_name">CompromissoCerto</string>
    <string name="caixa_seu_compromisso">Digite o Nome do seu compromisso</string>
    <string name="selecioneUmaData">Selecione Uma Data</string>
    <string name="hora">hh:mm</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnMeusCompromissos">Meus Compromissos</string>
    <string name="btnAdcCompromissos">Adicionar Novo Compromisso</string>
    <string name="splashTitulopt1">Não perca mais</string>
    <string name="splashTitulopt2">seus compromissos</string>

    <string name="SegundoBtnNovoCompromisso">Adicionar compromisso</string>
    <string name="BtnLixeira"></string>
    <string name="BtnEditar"></string>

    <string name="editar">Editar:</string>
    <string name="editarCompromisso">Compromisso:</string>
    <string name="hintEditarCompromisso">Digite o nome do seu compromisso</string>
    <string name="editarData">Data:</string>
    <string name="editarHora">Horário:</string>
    <string name="hintEditarHora">hh:mm</string>
    <string name="btnSalvarAlteracoes">Salvar Alterações</string>
    <string name="btnParar">Parar</string>


</resources>