<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/idTitulo"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Compromisso Certo"
        android:textStyle="bold"
        android:textSize="22sp"
        android:theme="@style/Base.Theme.texto"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp">

    </TextView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
           >


            <EditText
                android:id="@+id/idCaixaDigit"
                android:layout_width="350dp"
                android:layout_height="48dp"
                android:layout_margin="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/caixa_seu_compromisso"
                android:inputType="text"
                android:textStyle="italic"
                android:theme="@style/Base.Theme.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/idSelecioneAdata"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:text="@string/selecioneUmaData"
                android:textSize="22sp"
                android:theme="@style/Base.Theme.texto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idCaixaDigit" />


            <CalendarView
                android:id="@+id/idCalendario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="clip_horizontal"
                android:layout_marginStart="12dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:theme="@style/Base.Theme.Calendario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.491"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idSelecioneAdata" />

            <EditText
                android:id="@+id/idHora"
                android:layout_width="140dp"
                android:layout_height="48dp"
                android:layout_marginStart="113dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="113dp"
                android:ems="10"
                android:hint="@string/hora"
                android:inputType="time"
                android:theme="@style/Base.Theme.hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idTxtHora" />

            <TextView
                android:id="@+id/idTxtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="113dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="113dp"
                android:text="Digite a Hora: "
                android:textSize="22sp"
                android:theme="@style/Base.Theme.texto"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idCalendario" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idBtnSalvar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="#78ADFA"
                android:text="@string/btnSalvar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/idHora" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>