<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.CompromissosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/idTituloCompromisso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/archivonarrow"
                android:text="Meus compromissos:"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="12dp"
                android:background="#A6FFFFFF"
                tools:layout_editor_absoluteX="58dp"
                tools:layout_editor_absoluteY="128dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idBtnEditar"
                    android:layout_width="53dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:background="@android:drawable/ic_menu_edit"
                    android:text="@string/BtnEditar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.541" />

                <TextView
                    android:id="@+id/idDataEHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="dia 15/12/2024 às 10h"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/idBtnLixeira"
                    app:layout_constraintStart_toEndOf="@+id/idBtnEditar"
                    app:layout_constraintTop_toBottomOf="@+id/idConsultaMedica" />

                <TextView
                    android:id="@+id/idConsultaMedica"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Consulta médica"
                    app:layout_constraintEnd_toStartOf="@+id/idBtnLixeira"
                    app:layout_constraintStart_toEndOf="@+id/idBtnEditar"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/idBtnLixeira"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="16dp"
                    android:background="@android:drawable/ic_menu_close_clear_cancel"
                    android:text="@string/BtnLixeira"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/idSegundoBtnNovoCompromisso"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="36dp"
                android:background="#78ADFA"
                android:fontFamily="@font/archivonarrow"
                android:text="@string/SegundoBtnNovoCompromisso"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>